# Sample

./: .gitignore  README.md  build.gradle  finder.gradle  local.properties  obj.txt  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml  activity_screenshot.xml  activity_test_aidl.xml  activity_test_text.xml  activity_webview.xml  fragment_screenshot.xml
app/src/zxo/: TestOtherDir.java
finder/: build.gradle  maven-upload.gradle
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle
nativejpeg/: CMakeLists.txt  build.gradle
nativejpeg/src/main/: AndroidManifest.xml
nativejpeg/src/main/cpp/: nativejpeg.cpp
nativejpeg/src/main/java/com/example/nativejpeg/: NativeLib.java
repo/com/zxo/finder/finder-plugin/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
repo/com/zxo/finder/finder-plugin/0.1/: finder-plugin-0.1.jar.md5  finder-plugin-0.1.jar.sha1  finder-plugin-0.1.jar.sha256  finder-plugin-0.1.jar.sha512  finder-plugin-0.1.module  finder-plugin-0.1.module.md5  finder-plugin-0.1.module.sha1  finder-plugin-0.1.module.sha256  finder-plugin-0.1.module.sha512  finder-plugin-0.1.pom  finder-plugin-0.1.pom.md5  finder-plugin-0.1.pom.sha1  finder-plugin-0.1.pom.sha256  finder-plugin-0.1.pom.sha512
repo/com/zxo/finder/finder-plugin/0.2/: finder-plugin-0.2.jar.md5  finder-plugin-0.2.jar.sha1  finder-plugin-0.2.jar.sha256  finder-plugin-0.2.jar.sha512  finder-plugin-0.2.module  finder-plugin-0.2.module.md5  finder-plugin-0.2.module.sha1  finder-plugin-0.2.module.sha256  finder-plugin-0.2.module.sha512  finder-plugin-0.2.pom  finder-plugin-0.2.pom.md5  finder-plugin-0.2.pom.sha1  finder-plugin-0.2.pom.sha256  finder-plugin-0.2.pom.sha512
repo/com/zxo/finder/finder-plugin/0.3/: finder-plugin-0.3.module  (+13 more)
(+98 files in other folders)
